# mm_avh_working_space

./: .gitattributes  .gitignore  LICENSE  README.md  constants.py  pyproject.toml  requirements.txt  run_mm_avh.bat  start.py  test.py
.github/temp/: content.md
data/: config.py  settings.json  settings.py
installation/IVONA/: installation.txt
modules/: mkv_processing.py  mkvtoolnix.py  subtitle.py  subtitle_to_speech.py  translator.py  tts_elevenbytes.py  tts_fish_api.py  tts_readlover.py  tts_stylish.py
tests/: MM_AVH_pre.py  chat.py  merge_audio_test.py  num2words_test.py  pylint_tests.py  real_esrgan_and_others.py  sent_tokenize_test.py  translator-gpt-no-re-ask.py  translator-gpt-re-ask_alt.py  translator_test.py  tts_balcon_test.py  tts_google_test.py  tts_local_test.py  tts_online_edge_test_0.py  tts_online_edge_test_1.py  tts_online_edge_test_2.py  tts_test.py
utils/: cool_animation.py  execution_timer.py  number_in_words.py  text_chunker.py
working_space/: start.py
