[project]
name = "mm-avh-working-space"
version = "2.0.0"
description = "Multimedia Magic – Audio Visual Heaven - Zestaw narzędzi do przetwarzania multimediów, lektorowania i tworzenia audiobooków"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "accelerate>=1.13.0",
    "async-timeout>=5.0.1",
    "audioop-lts>=0.2.2",
    "deepl>=1.27.0",
    "edge-tts>=7.2.7",
    "einops>=0.8.2",
    "googletrans>=4.0.2",
    "librosa>=0.11.0",
    "matplotlib>=3.10.8",
    "munch>=4.0.0",
    "natsort>=8.4.0",
    "nltk>=3.9.2",
    "nnaudio>=0.3.4",
    "numpy>=2.4.1",
    "opencv-python>=4.13.0.90",
    "phonemizer>=3.3.0",
    "pyasstosrt>=1.5.0",
    "pyautogui>=0.9.54",
    "pydantic>=2.12.5",
    "pydub>=0.25.1",
    "pyperclip>=1.11.0",
    "pysrt>=1.1.2",
    "pysubs2>=1.8.0",
    "pyttsx3>=2.99",
    "rich>=14.3.0",
    "ring-attention-pytorch>=0.5.20",
    "safetensors>=0.7.0",
    "scipy>=1.17.0",
    "six>=1.17.0",
    "soundfile>=0.13.1",
    "torch>=2.10.0",
    "torchaudio>=2.10.0",
    "transformers>=5.3.0",
    "monotonic-align",
    "nvidia-ml-py>=13.590.48",
]

[tool.uv.sources]
torch = { index = "pytorch-cu128" }
torchaudio = { index = "pytorch-cu128" }
monotonic-align = { git = "https://github.com/resemble-ai/monotonic_align.git" }

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true
